2013-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Record failed urls as well to the
	arrived database.  Suggested by Dan Jacobson.
	(w3m-delete-buffer): Kill form buffers before killing a page buffer.
	(w3m-delete-buffer): Work around mysterious bug where window positions
	aren't restored if this command is called by a mouse event.  Reported
	by Dan Jacobson.

2013-08-26  Dan Jacobson  <jidanni@jidanni.org>

	* w3m.el (w3m-toolbar): Simplify the label used for w3m-history.

2013-08-13  Kevin Ryde  <user42@zip.com.au>

	* w3mhack.el (w3mhack-module-list): Remove w3mhack-load-file from the
	modules not to be byte compiled, so that it is byte compiled.
	(w3mhack-generate-load-file): Remove no-byte-compile from w3m-load.el.

2013-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-parse-and-fontify): Prefer base url if any
	rather than the current url when constructing urls that form buttons
	specify.  Thanks to Thorsten Jolitz [emacs-w3m: 12107].

2013-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m): Enable it again to fetch Gmane url and others.
	(w3m-gmane-url-at-point): Update url.

2013-06-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-use-cookies): Default to t.

	Make `w3m-input-url' offer no useless initial string.
	* w3m.el (w3m-active-region-or-url-at-point, w3m-input-url)
	(w3m-download, w3m-view-this-url, w3m-view-url-with-external-browser)
	(w3m-goto-url, w3m-goto-url-new-session, w3m): Do.

2013-06-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4: Make configure work for term-mode running in Emacs.

2013-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (ffap-url-regexp): Silence the byte compiler.

	* mime-w3m.el: Require calist when compiling.

2013-05-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el: Don't use obsolete macro dont-compile.

	* w3m.el (w3m-goto-mailto-url): Bind display-buffer-alist instead of